--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created only to store files"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
-    <title>Trender CDN</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+<!doctype html>
+    <html lang="en">
+    <body>
+        <h1>No</h1>
+    </body>
 </html>
